[package]
name = "discord-gemini-bot"
version = "0.1.0"
edition = "2021"

[dependencies]
serenity = { version = "0.11", default-features = false, features = ["client", "gateway", "rustls_backend", "model"] } # Added unstable_events
reqwest = { version = "0.11", features = ["json"] } # For making HTTP requests
tokio = { version = "1", features = ["full"] } # Async runtime
serde = { version = "1.0", features = ["derive"] } # For JSON serialization/deserialization
serde_json = "1.0" # For JSON handling
dotenv = "0.15" # For loading environment variables
rand = "0.8"