[package]
name = "discord-gemini-bot"
version = "0.1.0"
edition = "2021"

[dependencies]
serenity = { version = "0.11", default-features = false, features = ["client", "gateway", "rustls_backend", "model"] }
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenv = "0.15"
rand = "0.8"
rusqlite = { version = "0.28", features = ["bundled", "chrono"] }
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = "0.8"